force-app/main/default/objects/KimbleOne__CreditNoteLineItemTaxItem__c/KimbleOne__CreditNoteLineItemTaxItem__c.object-meta.xml
<CustomObject>
    <label>Credit Note Line Item Tax Item</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Credit Note Line Item Tax Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Note Line Item Tax Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>