force-app/main/default/objects/KimbleOne__CreditNoteLineItemTaxItem__c/fields/KimbleOne__CreditNoteLine__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CreditNoteLine__c</fullName>
    <label>Credit Note Line</label>
    <referenceTo>KimbleOne__CreditNoteLine__c</referenceTo>
    <relationshipLabel>Credit Note Line Item Tax Items</relationshipLabel>
    <relationshipName>CreditNoteLineItemTaxItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>