force-app/main/default/objects/KimbleOne__CreditNoteLineItemTaxItem__c/fields/KimbleOne__CreditNoteLineItem__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CreditNoteLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Note Line Item</label>
    <referenceTo>KimbleOne__CreditNoteLineItem__c</referenceTo>
    <relationshipLabel>Credit Note Line Item Tax Items</relationshipLabel>
    <relationshipName>CreditNoteLineItemTaxItems</relationshipName>
    <type>Lookup</type>
</CustomField>